force-app/main/default/objects/ssot__PromotionActionableList__dlm/fields/ssot__ActionableListId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActionableListId__c</fullName>
    <label>Actionable List</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActionableListId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>