force-app/main/default/objects/ssot__PromotionActionableList__dlm/fields/ssot__rel_1729831543807_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729831543807_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionActionableList_ActionableLi_rel</label>
    <referenceTo>ssot__ActionableList__dlm</referenceTo>
    <relationshipLabel>PromotionActionableList_ActionableLi_rel</relationshipLabel>
    <relationshipName>rel_1729831543807_end</relationshipName>
    <type>Lookup</type>
</CustomField>