force-app/main/default/objects/ssot__PromotionActionableList__dlm/fields/ssot__rel_1731659078948_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731659078948_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionActionableList_PromotionId__rel</label>
    <referenceTo>ssot__Promotion__dlm</referenceTo>
    <relationshipLabel>PromotionActionableList_PromotionId__rel</relationshipLabel>
    <relationshipName>rel_1731659078948_end</relationshipName>
    <type>Lookup</type>
</CustomField>